Fixed Table Overflow issue and Updated text to Bold

--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -182,10 +182,6 @@ table img {
         width: 100%;
     }
 
-    .tableview {
-        overflow: auto
-    }
-
     .productName {
         display: block;
     }
